# API-

./: MakeFile  README.md  pyproject.toml
text_analyser/: __init__.py  __main__.py
text_analyser/endpoints/: __init__.py  language.py  tonality.py
text_analyser/schemas/: __init__.py  sentence_with_tone.py  tonality.py
text_analyser/utils/: __init__.py  language.py  threads_using.py  tonality.py
